--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/algorithms.dll",
+            "program": "${workspaceFolder}/bin/Debug/net5.0/algorithms.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "console": "externalTerminal",
